src/objects/Bank_account__c.object
<CustomObject>
    <fields>
        <fullName>Account_type__c</fullName>
        <label>Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <summarizedField>Plastic_card__c.Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Plastic_card__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Plastic_card__c.Bank_account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bank accounts</relationshipLabel>
        <relationshipName>Bank_accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Daily_limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Daily limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debt_per_month__c</fullName>
        <label>Debt per month</label>
        <summarizedField>Plastic_card__c.Interest_payable_amount__c</summarizedField>
        <summaryForeignKey>Plastic_card__c.Bank_account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IMAGE( 
IF( Active__c = true, &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;),
 &quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_daily_limit__c</fullName>
        <label>Initial daily limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_monthly_limit__c</fullName>
        <label>Initial monthly limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_time_limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One time limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdraft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdraft_limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overdraft limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redemption_of_an_overdraft__c</fullName>
        <formula>DATE(YEAR(TODAY()), MONTH(TODAY())+1, 1) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redemption of an overdraft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replenishment_per_month__c</fullName>
        <label>Replenishment per month</label>
        <summarizedField>Plastic_card__c.Replenishment_per_month__c</summarizedField>
        <summaryForeignKey>Plastic_card__c.Bank_account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_debt__c</fullName>
        <label>Total debt</label>
        <summarizedField>Plastic_card__c.Requested_Balance__c</summarizedField>
        <summaryForeignKey>Plastic_card__c.Bank_account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Current_Month__c</fullName>
        <formula>Initial_monthly_limit__c -  Monthly_limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Current Month</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Bank account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Balance__c</columns>
        <columns>Customer__c</columns>
        <columns>Account_type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Bank account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank accounts</pluralLabel>
    <recordTypes>
        <fullName>Bank_Account_Record_Type</fullName>
        <active>true</active>
        <label>Bank Account Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Record_Type</fullName>
        <active>true</active>
        <label>Credit Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit_Record_Type</fullName>
        <active>true</active>
        <label>Debit Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>